--- a/style.css
+++ b/style.css
@@ -4,3 +4,52 @@ body {
   margin: 0;
   padding: 20px;
 }
+
+h1 {
+  text-align: center;
+  color: #ff6f00;
+  font-size: 48px;
+  margin-bottom: 50px;
+  letter-spacing: 10px;
+}
+
+.search-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.search-input {
+  width: 400px;
+  padding: 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  outline: none;
+  transition: box-shadow 0.3s ease;
+}
+
+.search-input:hover,
+.search-input:focus {
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.search-button {
+  padding: 10px 20px;
+  background-color: #ff6f00;
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.search-button:hover {
+  background-color: #ff8f00;
+}
